<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include layout="@layout/toolbar_light_dark"/>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/profilesList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/menu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            app:fab_colorRipple="@android:color/white"
            app:layout_behavior="com.github.shadowsocks.widget.FloatingActionMenuBehavior"
            app:menu_colorNormal="@color/material_accent_500"
            app:menu_colorPressed="@color/material_accent_700">

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fab_ssr_sub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fab_colorNormal="@color/material_accent_500"
                app:fab_colorPressed="@color/material_accent_700"
                app:fab_colorRipple="@android:color/white"
                app:fab_label="@string/add_profile_methods_ssr_sub"
                app:fab_size="mini"
                />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fab_manual_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fab_colorNormal="@color/material_accent_500"
                app:fab_colorPressed="@color/material_accent_700"
                app:fab_colorRipple="@android:color/white"
                app:fab_label="@string/add_profile_methods_manual_settings"
                app:fab_size="mini"
                />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fab_qrcode_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fab_colorNormal="@color/material_accent_500"
                app:fab_colorPressed="@color/material_accent_700"
                app:fab_colorRipple="@android:color/white"
                app:fab_label="@string/add_profile_methods_scan_qr_code"
                app:fab_size="mini"
                />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fab_nfc_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fab_colorNormal="@color/material_accent_500"
                app:fab_colorPressed="@color/material_accent_700"
                app:fab_colorRipple="@android:color/white"
                app:fab_label="NFC"
                app:fab_size="mini"
                />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fab_import_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fab_colorNormal="@color/material_accent_500"
                app:fab_colorPressed="@color/material_accent_700"
                app:fab_colorRipple="@android:color/white"
                app:fab_label="@string/action_import"
                app:fab_size="mini"
                />
        </com.github.clans.fab.FloatingActionMenu>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</LinearLayout>
