<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipChildren="false"
                tools:ignore="UnknownIdInLayout">

    <LinearLayout
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:animateLayoutChanges="true"
        android:orientation="vertical">

        <include layout="@layout/toolbar_light_dark"/>

        <LinearLayout
            android:id="@+id/stat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_stat"
            android:elevation="4dp"
            android:focusable="true"
            android:gravity="center_vertical"
            android:minHeight="?android:attr/listPreferredItemHeight"
            android:nextFocusRight="@+id/fab"
            android:orientation="vertical"
            android:paddingBottom="16dip"
            android:paddingEnd="88dip"
            android:paddingLeft="16dip"
            android:paddingRight="88dip"
            android:paddingStart="16dip"
            android:paddingTop="16dip"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:text="@string/stat"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/connection_test"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="14sp"/>
            </LinearLayout>

            <androidx.gridlayout.widget.GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:columnCount="4">

                <TextView
                    style="@style/TextAppearance.AppCompat.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    android:ellipsize="marquee"
                    android:gravity="end"
                    android:text="@string/sent"
                    app:layout_column="0"/>

                <TextView
                    android:id="@+id/tx"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="14sp"
                    app:layout_column="1"
                    app:layout_columnWeight="1"
                    app:layout_gravity="fill_horizontal"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:text="▲"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="14sp"
                    app:layout_column="2"/>

                <TextView
                    android:id="@+id/txRate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:gravity="end"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="14sp"
                    app:layout_column="3"
                    app:layout_columnWeight="1"
                    app:layout_gravity="fill_horizontal"/>

                <TextView
                    style="@style/TextAppearance.AppCompat.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    android:ellipsize="marquee"
                    android:gravity="end"
                    android:text="@string/received"
                    app:layout_column="0"
                    app:layout_row="1"/>

                <TextView
                    android:id="@+id/rx"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="14sp"
                    app:layout_column="1"
                    app:layout_columnWeight="1"
                    app:layout_gravity="fill_horizontal"
                    app:layout_row="1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:text="▼"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="14sp"
                    app:layout_column="2"
                    app:layout_row="1"/>

                <TextView
                    android:id="@+id/rxRate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:gravity="end"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="14sp"
                    app:layout_column="3"
                    app:layout_columnWeight="1"
                    app:layout_gravity="fill_horizontal"
                    app:layout_row="1"/>
            </androidx.gridlayout.widget.GridLayout>
        </LinearLayout>
    </LinearLayout>

    <fragment
        android:id="@android:id/content"
        android:name="com.github.shadowsocks.ShadowsocksSettings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title_bar"/>

    <com.github.jorgecastilloprz.FABProgressCircle
        android:id="@+id/fabProgressCircle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/title_bar"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="@dimen/fab_margin_bottom"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:elevation="6dp"

        app:arcColor="@color/material_blue_grey_700"
        app:reusable="true">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/material_blue_grey_700"
            app:borderWidth="0dp"
            app:pressedTranslationZ="6dp"
            app:rippleColor="@color/material_blue_grey_700"
            app:srcCompat="@drawable/ic_start_idle"
            tools:ignore="VectorDrawableCompat"/>
    </com.github.jorgecastilloprz.FABProgressCircle>
</RelativeLayout>
